--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -10,6 +10,8 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  text-align: center;
+  margin-bottom: 32px;
 }
 
 /* do not edit this footer */
@@ -24,3 +26,21 @@ img {
   justify-content: center;
   background: #eee;
 }
+
+.container{
+  display: flex;
+  justify-content: center;
+  /* align-items: center; */
+  /* margin: 32px; */
+  gap: 52px;
+}
+
+.item{
+  /* display: flex;   */
+  align-items: center;
+  text-align: center;
+  max-width: 200px;
+}
+
+
+
