--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -20,6 +20,9 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  display: flex;
+  padding: 16px;
+  gap: 16px;
 }
 
 .icon {
@@ -33,6 +36,8 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  /* margin: 12px; */
+  flex-shrink: 0;
 }
 
 .close-button {
@@ -48,6 +53,7 @@ body {
   justify-content: center;
   border: 1px solid #eee;
   padding: 0;
+  /* margin-right: 12px; */
 }
 
 button {
@@ -66,4 +72,23 @@ button.cancel {
   background: white;
   border: 1px solid #ddd;
   color: royalblue;
+}
+
+.header{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  /* margin: 12px 12px 6px 0px; */
+  margin-bottom: 8px;
+  font-weight: bold;
+  font-size: 18px;
+}
+
+.text{
+  margin-bottom: 16px;
+  /* padding-right: 0px; */
+}
+
+.continue,.cancel{
+  /* margin-bottom: 12px; */
 }
